--- a/CPClient/src/main/java/mainUI/Login.fxml
+++ b/CPClient/src/main/java/mainUI/Login.fxml
@@ -39,13 +39,13 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="loginBtn" layoutX="192.0" layoutY="343.0" mnemonicParsing="false" onAction="#onLoginBtnClicked" prefHeight="27.0" prefWidth="72.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" text="Log In" AnchorPane.leftAnchor="200.0">
+      <Button fx:id="loginBtn" layoutX="192.0" layoutY="343.0" mnemonicParsing="false" onAction="#onLoginBtnClicked" onKeyPressed="#onLoginBtnClicked" prefHeight="27.0" prefWidth="72.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" text="Log In" AnchorPane.leftAnchor="200.0">
          <font>
             <Font name="Helvetica" size="14.0" />
          </font>
       </Button>
       <TextField fx:id="usernameTxt" layoutX="236.0" layoutY="240.0" style="-fx-background-radius: 0.5;" AnchorPane.bottomAnchor="133.0" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="164.0" AnchorPane.topAnchor="240.0" />
-      <PasswordField fx:id="passwordTxt" layoutX="236.0" layoutY="293.0" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="164.0" />
+      <PasswordField fx:id="passwordTxt" layoutX="236.0" layoutY="293.0" onKeyPressed="#onLoginBtnClicked" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="164.0" />
       <Label fx:id="usernameLabel" layoutX="433.0" layoutY="240.0" prefHeight="27.0" prefWidth="123.0" text="" AnchorPane.leftAnchor="434.0" AnchorPane.rightAnchor="40.0" />
       <Label fx:id="passwordLabel" layoutX="434.0" layoutY="293.0" prefHeight="27.0" prefWidth="123.0" text="" AnchorPane.leftAnchor="434.0" AnchorPane.rightAnchor="40.0" />
       <Button fx:id="signupBtn" layoutX="307.0" layoutY="343.0" mnemonicParsing="false" text="Sign Up" AnchorPane.leftAnchor="320.0" AnchorPane.rightAnchor="200.0" />
