--- a/CPClient/src/main/java/ui/salesmanUI/VIP.fxml
+++ b/CPClient/src/main/java/ui/salesmanUI/VIP.fxml
@@ -89,24 +89,22 @@
                         <Label layoutY="45.0" prefHeight="45.0" prefWidth="145.0" text="分类" textFill="#938c8c" />
                         <Label layoutY="88.0" prefHeight="45.0" prefWidth="145.0" text="电话" textAlignment="CENTER" textFill="#938c8c" />
                         <Label layoutY="133.0" prefHeight="45.0" prefWidth="145.0" text="地址" textAlignment="CENTER" textFill="#938c8c" />
-                        <Label layoutY="176.0" prefHeight="45.0" prefWidth="145.0" text="电子邮箱" textAlignment="CENTER" textFill="#938c8c" />
+                        <Label layoutY="176.0" prefHeight="45.0" prefWidth="145.0" text="默认业务员" textAlignment="CENTER" textFill="#938c8c" />
                         <Label layoutX="1.0" layoutY="285.0" prefHeight="45.0" prefWidth="145.0" text="应收额度" textAlignment="CENTER" textFill="#938c8c" />
-                        <TextField layoutX="162.0" layoutY="14.0" opacity="0.65" />
+                        <TextField layoutX="146.0" layoutY="14.0" opacity="0.65" />
                         <TextField layoutX="541.0" layoutY="55.0" opacity="0.61" />
-                        <TextField layoutX="162.0" layoutY="55.0" opacity="0.65" />
+                        <TextField layoutX="146.0" layoutY="54.0" opacity="0.65" />
                         <Label layoutX="414.0" layoutY="5.0" prefHeight="45.0" prefWidth="145.0" text="编号" textFill="#938c8c" />
                         <TextField layoutX="541.0" layoutY="14.0" opacity="0.65" />
                         <Label layoutX="414.0" layoutY="44.0" prefHeight="45.0" prefWidth="145.0" text="级别" textFill="#938c8c" />
-                        <TextField layoutX="162.0" layoutY="97.0" opacity="0.65" />
-                        <TextField layoutX="162.0" layoutY="142.0" opacity="0.65" />
+                        <TextField layoutX="146.0" layoutY="97.0" opacity="0.65" />
+                        <TextField layoutX="146.0" layoutY="142.0" opacity="0.65" />
                         <TextField layoutX="541.0" layoutY="97.0" opacity="0.61" />
-                        <Label layoutX="414.0" layoutY="88.0" prefHeight="45.0" prefWidth="145.0" text="密码" textAlignment="CENTER" textFill="#938c8c" />
-                        <Label layoutX="414.0" layoutY="133.0" prefHeight="45.0" prefWidth="145.0" text="邮编" textAlignment="CENTER" textFill="#938c8c" />
+                        <Label layoutX="414.0" layoutY="88.0" prefHeight="45.0" prefWidth="145.0" text="邮编" textAlignment="CENTER" textFill="#938c8c" />
+                        <Label layoutX="414.0" layoutY="133.0" prefHeight="45.0" prefWidth="145.0" text="电子邮箱" textAlignment="CENTER" textFill="#938c8c" />
                         <TextField layoutX="541.0" layoutY="142.0" opacity="0.61" />
-                        <TextField layoutX="162.0" layoutY="185.0" opacity="0.65" />
-                        <Label layoutX="414.0" layoutY="176.0" prefHeight="45.0" prefWidth="145.0" text="默认业务员" textAlignment="CENTER" textFill="#938c8c" />
-                        <TextField layoutX="541.0" layoutY="185.0" opacity="0.61" />
-                        <TextField layoutX="162.0" layoutY="294.0" opacity="0.65" />
+                        <TextField layoutX="146.0" layoutY="185.0" opacity="0.65" />
+                        <TextField layoutX="146.0" layoutY="294.0" opacity="0.65" />
                         <Label layoutY="228.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
                         <Label layoutX="29.0" layoutY="235.0" text="应收应付">
                            <font>
@@ -114,7 +112,7 @@
                            </font>
                         </Label>
                         <Label layoutX="1.0" layoutY="328.0" prefHeight="45.0" prefWidth="145.0" text="应收" textAlignment="CENTER" textFill="#938c8c" />
-                        <TextField layoutX="162.0" layoutY="337.0" opacity="0.65" />
+                        <TextField layoutX="146.0" layoutY="337.0" opacity="0.65" />
                         <Label layoutX="414.0" layoutY="328.0" prefHeight="45.0" prefWidth="145.0" text="应付" textAlignment="CENTER" textFill="#938c8c" />
                         <TextField layoutX="541.0" layoutY="337.0" opacity="0.61" />
                      </children>
@@ -124,7 +122,11 @@
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="754.0" layoutY="56.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="57.0" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="修改" textFill="#fff7fb" />
+                  <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="768.0" layoutY="34.0">
+                     <image>
+                        <Image url="@../stockmanUI/edit.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
         </content>
