--- a/CPClient/src/main/java/ui/stockmanUI/Goods.fxml
+++ b/CPClient/src/main/java/ui/stockmanUI/Goods.fxml
@@ -9,7 +9,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #FFF7FB;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saleUI.SaleLookController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #FFF7FB;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.stockmanUI.GoodsController">
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" />
       <Pane layoutX="-4.0" prefHeight="97.0" prefWidth="1207.0" style="-fx-background-color: #FFECEC;">
@@ -19,11 +19,11 @@
                   <Font name="System Bold Italic" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="1136.0" layoutY="13.0" text="注销" textFill="#9f353a">
-               <font>
-                  <Font name="System Bold Italic" size="18.0" />
-               </font>
-            </Label>
+            <ImageView fx:id="logOut" layoutX="1157.0" layoutY="14.0">
+               <image>
+                  <Image url="@logOut.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Pane layoutX="214.0" layoutY="123.0" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
@@ -34,8 +34,8 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField layoutX="625.0" layoutY="74.0" prefHeight="32.0" prefWidth="167.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" />
-            <Button layoutX="830.0" layoutY="79.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="65.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询" textFill="WHITE" />
+            <TextField fx:id="searchFeild" layoutX="625.0" layoutY="74.0" prefHeight="32.0" prefWidth="167.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" />
+            <Button fx:id="searchBtn" layoutX="825.0" layoutY="77.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="65.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询" textFill="WHITE" />
             <ImageView layoutX="761.0" layoutY="78.0">
                <image>
                   <Image url="@search.png" />
@@ -66,15 +66,6 @@
                   <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单        据         3" />
                </items>
             </MenuButton>
-            <MenuButton mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: #C48888;" text="      商品" textFill="#9f353a">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <items>
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparant;" text="商品管理" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="商品分类管理" />
-               </items>
-            </MenuButton>
             <MenuButton mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      个人" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
@@ -84,6 +75,11 @@
                   <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="个人信息" />
                </items>
             </MenuButton>
+            <Button mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="商品" textFill="#9f353a">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
             <Button mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="草稿" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
@@ -141,7 +137,7 @@
                </font>
             </Label>
             <Label layoutX="242.0" layoutY="39.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="631.0" layoutY="23.0">
+            <ImageView fx:id="editBtn" fitHeight="25.0" fitWidth="25.0" layoutX="631.0" layoutY="23.0">
                <image>
                   <Image url="@edit.png" />
                </image>
@@ -167,27 +163,27 @@
             </VBox>
             <Pane layoutX="8.0" layoutY="6.0" prefHeight="42.0" prefWidth="180.0" style="-fx-border-color: #ff7575; -fx-border-radius: 12;">
                <children>
-                  <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="14.0" layoutY="9.0">
+                  <ImageView fx:id="allSelectBtn" fitHeight="24.0" fitWidth="24.0" layoutX="14.0" layoutY="9.0">
                      <image>
                         <Image url="@all.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="44.0" layoutY="9.0">
+                  <ImageView fx:id="newGoodsORCategoryBtn" fitHeight="24.0" fitWidth="24.0" layoutX="44.0" layoutY="9.0">
                      <image>
                         <Image url="@add.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="76.0" layoutY="9.0">
+                  <ImageView fx:id="moveBtn" fitHeight="24.0" fitWidth="24.0" layoutX="76.0" layoutY="9.0">
                      <image>
                         <Image url="@move.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="142.0" layoutY="7.0">
+                  <ImageView fx:id="deleteBtn" fitHeight="24.0" fitWidth="24.0" layoutX="142.0" layoutY="7.0">
                      <image>
                         <Image url="@delete.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="110.0" layoutY="9.0">
+                  <ImageView fx:id="changeNameBtn" fitHeight="24.0" fitWidth="24.0" layoutX="110.0" layoutY="9.0">
                      <image>
                         <Image url="@survey.png" />
                      </image>
