--- a/CPClient/src/main/java/ui/stockmanUI/Stockman.fxml
+++ b/CPClient/src/main/java/ui/stockmanUI/Stockman.fxml
@@ -74,7 +74,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="draftBtn" mnemonicParsing="false" onAction="#lookDraft" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="草稿" textFill="#9f353a">
+            <Button fx:id="draftBtn" mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="草稿" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
