--- a/CPClient/src/main/resources/fxml/salesmanUI/SaleNew.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/SaleNew.fxml
@@ -19,14 +19,14 @@
                   <Font name="System Bold Italic" size="20.0" />
                </font>
             </Label>
-            <ImageView layoutX="1160.0" layoutY="14.0">
+            <ImageView layoutX="1159.0" layoutY="8.0">
                <image>
-                  <Image url="@../stockmanUI/logOut.png" />
+                  <Image url="@/img/logOut.png" />
                </image>
             </ImageView>
          </children>
       </Pane>
-              <VBox layoutX="13.0" layoutY="74.0" prefHeight="730.0" prefWidth="122.0" style="-fx-background-color: #ff7575;">
+            <VBox layoutX="13.0" layoutY="74.0" prefHeight="730.0" prefWidth="122.0" style="-fx-background-color: #ff7575;">
          <children>
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
@@ -71,9 +71,9 @@
             <DropShadow blurType="GAUSSIAN" color="#c74242cf" height="0.0" radius="6.2675" width="27.07" />
          </effect>
       </Circle>
-      <ScrollPane layoutX="200.0" layoutY="148.0" prefHeight="615.0" prefWidth="935.0" style="-fx-background-color: #FFB5B5;">
+      <ScrollPane fx:id="scrollPane" layoutX="200.0" layoutY="148.0" prefHeight="615.0" prefWidth="935.0" style="-fx-background-color: #FFB5B5;">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="629.0" prefWidth="915.0" style="-fx-background-color: #FFB5B5;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="672.0" prefWidth="920.0" style="-fx-background-color: #FFB5B5;">
                <children>
                   <Label layoutX="89.0" layoutY="39.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
                   <Label layoutX="116.0" layoutY="46.0" text="销售单">
@@ -81,41 +81,49 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Pane layoutX="89.0" layoutY="97.0" prefHeight="446.0" prefWidth="614.0">
+                  <Pane layoutX="89.0" layoutY="98.0" prefHeight="578.0" prefWidth="722.0">
                      <children>
-                        <Separator layoutX="162.0" layoutY="14.0" opacity="0.0" orientation="VERTICAL" prefHeight="397.0" prefWidth="3.0" />
-                        <VBox layoutX="-3.0" layoutY="2.0" prefHeight="457.0" prefWidth="131.0">
+                        <Separator layoutX="128.0" layoutY="67.0" opacity="0.0" orientation="VERTICAL" prefHeight="538.0" prefWidth="10.0" />
+                        <VBox layoutX="-3.0" layoutY="2.0" prefHeight="579.0" prefWidth="136.0">
                            <children>
                               <Label prefHeight="45.0" prefWidth="145.0" text="客户" textFill="#938c8c" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="操作员" textAlignment="CENTER" textFill="#938c8c" />
-                              <Label prefHeight="45.0" prefWidth="145.0" text="日期" textFill="#938c8c" />
-                              <Label prefHeight="45.0" prefWidth="145.0" text="商品列表" textFill="#938c8c" />
+                              <Label prefHeight="53.0" prefWidth="136.0" text="商品列表" textFill="#938c8c" />
                               <Label prefHeight="45.0" prefWidth="145.0" textFill="#938c8c" />
-                              <Label prefHeight="45.0" prefWidth="145.0" textFill="#938c8c" />
+                              <Label prefHeight="59.0" prefWidth="131.0" textFill="#938c8c" />
+                              <Label prefHeight="59.0" prefWidth="131.0" textFill="#938c8c" />
+                              <Label prefHeight="59.0" prefWidth="131.0" textFill="#938c8c" />
                               <Label prefHeight="59.0" prefWidth="131.0" textFill="#938c8c" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="优惠策略" textFill="#938c8c" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="总价" textFill="#938c8c" />
                            </children>
                         </VBox>
                         <TextField layoutX="162.0" layoutY="14.0" opacity="0.65" />
-                        <TextField layoutX="162.0" layoutY="94.0" opacity="0.61" />
-                        <TableView layoutX="158.0" layoutY="136.0" opacity="0.68" prefHeight="189.0" prefWidth="342.0" style="-fx-background-color: #FFB5B5;">
+                        <TextField layoutX="541.0" layoutY="55.0" opacity="0.61" />
+                        <TableView layoutX="160.0" layoutY="210.0" opacity="0.68" prefHeight="226.0" prefWidth="458.0" style="-fx-background-color: #FFB5B5;">
                           <columns>
-                            <TableColumn prefWidth="62.0" style="-fx-background-color: #FFF7FB;" text="商品" />
-                            <TableColumn prefWidth="68.0" text="单价" />
-                              <TableColumn prefWidth="71.0" text="数量" />
-                              <TableColumn prefWidth="68.0" text="小计" />
-                              <TableColumn prefWidth="73.0" text="操作" />
+                              <TableColumn prefWidth="93.0" text="商品" />
+                            <TableColumn prefWidth="92.0" text="单价" />
+                              <TableColumn prefWidth="94.0" text="数量" />
+                              <TableColumn prefWidth="90.0" text="小计" />
+                              <TableColumn prefWidth="87.0" text="操作" />
                           </columns>
                         </TableView>
-                        <Button layoutX="162.0" layoutY="336.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="促销策略" textFill="#fff7fb" />
-                        <Button layoutX="245.0" layoutY="336.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="促销策略" textFill="#fff7fb" />
-                        <Button layoutX="329.0" layoutY="336.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="促销策略" textFill="#fff7fb" />
-                        <Button layoutX="416.0" layoutY="336.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="促销策略" textFill="#fff7fb" />
+                        <Button layoutX="160.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="总额促销" textFill="#fff7fb" />
+                        <Button layoutX="243.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="满减促销" textFill="#fff7fb" />
+                        <Button layoutX="327.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="节日促销" textFill="#fff7fb" />
+                        <Button layoutX="414.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="折让促销" textFill="#fff7fb" />
                         <TextField layoutX="162.0" layoutY="53.0" opacity="0.65" />
+                        <Label layoutX="414.0" layoutY="5.0" prefHeight="45.0" prefWidth="145.0" text="仓库" textFill="#938c8c" />
+                        <TextField layoutX="541.0" layoutY="14.0" opacity="0.65" />
+                        <Label layoutX="414.0" layoutY="44.0" prefHeight="45.0" prefWidth="145.0" text="日期" textFill="#938c8c" />
+                        <Button layoutX="160.0" layoutY="113.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="商品分类" textFill="#fff7fb" />
+                        <Button layoutX="160.0" layoutY="171.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="商品名称" textFill="#fff7fb" />
+                        <TextField layoutX="254.0" layoutY="171.0" opacity="0.65" />
+                        <ComboBox layoutX="254.0" layoutY="113.0" prefHeight="26.0" prefWidth="168.0" />
                      </children>
                   </Pane>
-                  <Button layoutX="684.0" layoutY="544.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="71.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #a15858;" text="提交" textFill="#9f353a">
+                  <Button layoutX="730.0" layoutY="609.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="71.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #a15858;" text="提交" textFill="#9f353a">
                      <font>
                         <Font size="14.0" />
                      </font>
