--- a/CPClient/src/main/resources/fxml/stockmanUI/Goods.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/Goods.fxml
@@ -24,7 +24,7 @@
             <Button fx:id="searchBtn" layoutX="825.0" layoutY="77.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="65.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询" textFill="WHITE" />
             <ImageView layoutX="761.0" layoutY="78.0">
                <image>
-                  <Image url="@search.png" />
+                  <Image url="@/img/search.png" />
                </image>
             </ImageView>
          </children></Pane>
@@ -49,7 +49,7 @@
             </Label>
             <ImageView fitHeight="200.0" fitWidth="200.0" layoutY="2.0">
                <image>
-                  <Image url="@lamp1.JPG" />
+                  <Image url="@/img/lamp1.JPG" />
                </image>
             </ImageView>
             <Label layoutX="268.0" layoutY="152.0" text="库存数量" textFill="#000000a1" />
@@ -75,7 +75,7 @@
             <Label layoutX="242.0" layoutY="39.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
             <ImageView fx:id="editBtn" fitHeight="25.0" fitWidth="25.0" layoutX="631.0" layoutY="23.0">
                <image>
-                  <Image url="@edit.png" />
+                  <Image url="@/img/edit.png" />
                </image>
             </ImageView>
             <Label layoutX="347.0" layoutY="149.0" text="5" textFill="#228a6ea1">
@@ -101,27 +101,27 @@
                <children>
                   <ImageView fx:id="allSelectBtn" fitHeight="24.0" fitWidth="24.0" layoutX="14.0" layoutY="9.0">
                      <image>
-                        <Image url="@all.png" />
+                        <Image url="@/img/all.png" />
                      </image>
                   </ImageView>
                   <ImageView fx:id="newGoodsORCategoryBtn" fitHeight="24.0" fitWidth="24.0" layoutX="44.0" layoutY="9.0">
                      <image>
-                        <Image url="@add.png" />
+                        <Image url="@/img/add.png" />
                      </image>
                   </ImageView>
                   <ImageView fx:id="moveBtn" fitHeight="24.0" fitWidth="24.0" layoutX="76.0" layoutY="9.0">
                      <image>
-                        <Image url="@move.png" />
+                        <Image url="@/img/move.png" />
                      </image>
                   </ImageView>
                   <ImageView fx:id="deleteBtn" fitHeight="24.0" fitWidth="24.0" layoutX="142.0" layoutY="7.0">
                      <image>
-                        <Image url="@delete.png" />
+                        <Image url="@/img/delete.png" />
                      </image>
                   </ImageView>
                   <ImageView fx:id="changeNameBtn" fitHeight="24.0" fitWidth="24.0" layoutX="110.0" layoutY="9.0">
                      <image>
-                        <Image url="@survey.png" />
+                        <Image url="@/img/survey.png" />
                      </image>
                   </ImageView>
                </children>
