--- a/CPClient/src/main/resources/fxml/stockmanUI/lookAlarmList.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/lookAlarmList.fxml
@@ -21,7 +21,7 @@
             </Label>
             <ImageView layoutX="1161.0" layoutY="17.0">
                <image>
-                  <Image url="@logOut.png" />
+                  <Image url="@/img/logOut.png" />
                </image>
             </ImageView>
          </children>
@@ -29,7 +29,7 @@
       <Pane layoutX="214.0" layoutY="123.0" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
          <children>
             <Label layoutX="34.0" layoutY="14.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-            <Label layoutX="55.0" layoutY="23.0" text="库存赠送单">
+            <Label layoutX="55.0" layoutY="23.0" text="库存报警单">
                <font>
                   <Font size="18.0" />
                </font>
@@ -115,7 +115,7 @@
             </Label>
             <ImageView fitHeight="200.0" fitWidth="200.0" layoutY="2.0">
                <image>
-                  <Image url="@lamp1.JPG" />
+                  <Image url="@/img/lamp1.JPG" />
                </image>
             </ImageView>
             <Button layoutX="817.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #9f353a;" text="审核通过" textFill="#9f353a" />
@@ -148,7 +148,7 @@
             </Label>
             <ImageView fitHeight="200.0" fitWidth="200.0" layoutY="1.0">
                <image>
-                  <Image url="@lamp1.JPG" />
+                  <Image url="@/img/lamp1.JPG" />
                </image>
             </ImageView>
             <Button layoutX="814.0" layoutY="18.0" mnemonicParsing="false" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #9f353a;" text="审核未通过" textFill="#9f353a" />
