--- a/CPClient/src/main/resources/fxml/mainUI/Login.fxml
+++ b/CPClient/src/main/resources/fxml/mainUI/Login.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView fitHeight="410.0" fitWidth="608.0" layoutX="-4.0" layoutY="-205.0">
          <image>
-            <Image url="@loginBg3.jpg" />
+            <Image url="@/img/loginBg3.jpg" />
          </image>
       </ImageView>
       <Label layoutX="264.0" layoutY="86.0" text="登录">
