--- a/CPClient/src/main/resources/fxml/stockmanUI/Goods.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/Goods.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: ttansparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.stockmanUI.GoodsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.stockmanUI.GoodsController">
    <children>
    <fx:include source="Stockman.fxml" />
       <Pane layoutX="214.0" layoutY="123.0" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
@@ -20,11 +17,11 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="searchFeild" layoutX="625.0" layoutY="74.0" prefHeight="32.0" prefWidth="167.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" />
-            <Button fx:id="searchBtn" layoutX="825.0" layoutY="77.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="65.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询" textFill="WHITE" />
+            <TextField fx:id="searchField" layoutX="625.0" layoutY="74.0" onMouseClicked="#setSearchField" prefHeight="32.0" prefWidth="167.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" />
+            <Button fx:id="searchBtn" layoutX="825.0" layoutY="77.0" mnemonicParsing="false" onAction="#setSearchBtn" prefHeight="27.0" prefWidth="65.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询" textFill="WHITE" />
             <ImageView layoutX="761.0" layoutY="78.0">
                <image>
-                  <Image url="@/img/search.png" />
+                  <Image url="@../../img/search.png" />
                </image>
             </ImageView>
          </children></Pane>
@@ -32,11 +29,6 @@
          <children>
             <Label layoutX="264.0" layoutY="94.0" text="商品编号:XSD-yyyyMMdd-xxxxx" textFill="#000000a1" />
             <Label layoutX="483.0" layoutY="21.0" />
-            <Label layoutX="267.0" layoutY="55.0" text="商品名">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
             <Label layoutX="302.0" layoutY="268.0" text="¥2350" textFill="#a10707">
                <font>
                   <Font name="AdobeHebrew-Regular" size="24.0" />
@@ -49,7 +41,7 @@
             </Label>
             <ImageView fitHeight="200.0" fitWidth="200.0" layoutY="2.0">
                <image>
-                  <Image url="@/img/lamp1.JPG" />
+                  <Image url="@../../img/lamp1.JPG" />
                </image>
             </ImageView>
             <Label layoutX="268.0" layoutY="152.0" text="库存数量" textFill="#000000a1" />
@@ -73,9 +65,9 @@
                </font>
             </Label>
             <Label layoutX="242.0" layoutY="39.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-            <ImageView fx:id="editBtn" fitHeight="25.0" fitWidth="25.0" layoutX="631.0" layoutY="23.0">
+            <ImageView fx:id="editBtn" fitHeight="25.0" fitWidth="25.0" layoutX="631.0" layoutY="23.0" onMouseClicked="#setEditBtn">
                <image>
-                  <Image url="@/img/edit.png" />
+                  <Image url="@../../img/edit.png" />
                </image>
             </ImageView>
             <Label layoutX="347.0" layoutY="149.0" text="5" textFill="#228a6ea1">
@@ -83,6 +75,11 @@
                   <Font size="19.0" />
                </font>
             </Label>
+            <TextField editable="false" layoutX="257.0" layoutY="42.0" prefHeight="37.0" prefWidth="75.0" style="-fx-background-color: transparent;" text="商品名">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </TextField>
          </children>
       </Pane>
       <Pane layoutX="214.0" layoutY="282.0" prefHeight="435.0" prefWidth="196.0" style="-fx-background-color: #FFB5B5;">
@@ -99,29 +96,29 @@
             </VBox>
             <Pane layoutX="8.0" layoutY="6.0" prefHeight="42.0" prefWidth="180.0" style="-fx-border-color: #ff7575; -fx-border-radius: 12;">
                <children>
-                  <ImageView fx:id="allSelectBtn" fitHeight="24.0" fitWidth="24.0" layoutX="14.0" layoutY="9.0">
+                  <ImageView fx:id="allSelectBtn" fitHeight="24.0" fitWidth="24.0" layoutX="14.0" layoutY="9.0" onMouseClicked="#setAllSelectBtn">
                      <image>
-                        <Image url="@/img/all.png" />
+                        <Image url="@../../img/all.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="newGoodsORCategoryBtn" fitHeight="24.0" fitWidth="24.0" layoutX="44.0" layoutY="9.0">
+                  <ImageView fx:id="newGoodsORCategoryBtn" fitHeight="24.0" fitWidth="24.0" layoutX="44.0" layoutY="9.0" onMouseClicked="#setNewGoodsORCategoryBtn">
                      <image>
-                        <Image url="@/img/add.png" />
+                        <Image url="@../../img/add.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="moveBtn" fitHeight="24.0" fitWidth="24.0" layoutX="76.0" layoutY="9.0">
+                  <ImageView fx:id="moveBtn" fitHeight="24.0" fitWidth="24.0" layoutX="76.0" layoutY="9.0" onMouseClicked="#setMoveBtn">
                      <image>
-                        <Image url="@/img/move.png" />
+                        <Image url="@../../img/move.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="deleteBtn" fitHeight="24.0" fitWidth="24.0" layoutX="142.0" layoutY="7.0">
+                  <ImageView fx:id="deleteBtn" fitHeight="24.0" fitWidth="24.0" layoutX="142.0" layoutY="7.0" onMouseClicked="#setDeleteBtn">
                      <image>
-                        <Image url="@/img/delete.png" />
+                        <Image url="@../../img/delete.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="changeNameBtn" fitHeight="24.0" fitWidth="24.0" layoutX="110.0" layoutY="9.0">
+                  <ImageView fx:id="changeNameBtn" fitHeight="24.0" fitWidth="24.0" layoutX="110.0" layoutY="9.0" onMouseClicked="#setChangeNameBtn">
                      <image>
-                        <Image url="@/img/survey.png" />
+                        <Image url="@../../img/survey.png" />
                      </image>
                   </ImageView>
                </children>
